--- a/pom.xml
+++ b/pom.xml
@@ -163,12 +163,12 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.6.4</version>
+			<version>1.7.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.6.0</version>
+			<version>1.7.5</version>
 			<scope>runtime</scope>
 		</dependency>
 
@@ -605,36 +605,26 @@
 			<groupId>uk.org.taverna.databundle</groupId>
     		<artifactId>databundle</artifactId>
     		<version>0.1.0-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpclient-cache</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpcore</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpclient</artifactId>
-                </exclusion>
-            </exclusions>
 		</dependency>
+        <!-- HTTP client needed by Data Bundle -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>com.springsource.org.apache.httpcomponents.httpclient-cache</artifactId>
-            <version>4.2.1</version>
+    		<artifactId>httpclient-osgi</artifactId>
+    		<version>4.2.5</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>com.springsource.org.apache.httpcomponents.httpclient</artifactId>
-            <version>4.2.1</version>
+    		<artifactId>httpcore-osgi</artifactId>
+    		<version>4.2.5</version>
         </dependency>
+        <!-- Jena bundle needed by jsonld-java-jena -->
+        <!-- See https://github.com/stain/jena/tree/jena-bundle/jena-bundle -->
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>com.springsource.org.apache.httpcomponents.httpcore</artifactId>
-            <version>4.2.1</version>
+          <groupId>org.apache.jena</groupId>
+            <artifactId>jena-bundle</artifactId>
+            <version>2.11.0-SNAPSHOT</version>
         </dependency>
+        
         
 
 		<!-- Taverna Security -->
