--- a/pom.xml
+++ b/pom.xml
@@ -158,17 +158,18 @@
 	</distributionManagement>
 	<dependencies>
 
-		<!-- Workaround for slf4j api/impl version mismatch -->
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.5</version>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+			<scope>provided</scope>
 		</dependency>
+
+		<!-- slf4j implementation -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.5</version>
-			<scope>runtime</scope>
+			<version>1.7.4</version>
 		</dependency>
 
 		<!-- Spring DM -->
@@ -623,8 +624,8 @@
             <artifactId>jena-bundle</artifactId>
             <version>2.11.0-SNAPSHOT</version>
         </dependency>
-        
-        
+
+
 
 		<!-- Taverna Security -->
 		<dependency>
