--- a/pom.xml
+++ b/pom.xml
@@ -19,18 +19,24 @@
 			</activation>
 			<properties>
 				<assembly.descriptor>src/main/assembly/developer-assembly.xml</assembly.descriptor>
+				<profile.updateSite>http://dev.mygrid.org.uk/taverna/updates/taverna-workbench/</profile.updateSite>
+				<profile.pluginSite>http://dev.mygrid.org.uk/taverna/plugins/taverna-workbench/</profile.pluginSite>
 			</properties>
 		</profile>
 		<profile>
 			<id>nightly</id>
 			<properties>
 				<assembly.descriptor>src/main/assembly/nightly-assembly.xml</assembly.descriptor>
+				<profile.updateSite>http://dev.mygrid.org.uk/taverna/updates/taverna-workbench/</profile.updateSite>
+				<profile.pluginSite>http://dev.mygrid.org.uk/taverna/plugins/taverna-workbench/</profile.pluginSite>
 			</properties>
 		</profile>
 		<profile>
 			<id>release</id>
 			<properties>
 				<assembly.descriptor>src/main/assembly/release-assembly.xml</assembly.descriptor>
+				<profile.updateSite>http://www.mygrid.org.uk/taverna/updates/taverna-workbench/</profile.updateSite>
+				<profile.pluginSite>http://www.mygrid.org.uk/taverna/plugins/taverna-workbench/</profile.pluginSite>
 			</properties>
 		</profile>
 	</profiles>
@@ -82,9 +88,8 @@
 				<extensions>true</extensions>
 				<configuration>
 					<buildNumber>${buildNumber}</buildNumber>
-					<updateSite>http://www.mygrid.org.uk/taverna/updates/taverna-workbench/</updateSite>
-					<updateSite>http://localhost/~david/taverna/updates/taverna-workbench/</updateSite>
-					<pluginSite>http://localhost/~david/taverna/plugins/taverna-workbench/</pluginSite>
+					<updateSite>${profile.updateSite}</updateSite>
+					<pluginSite>${profile.pluginSite}</pluginSite>
 					<frameworkConfigurations>
 						<frameworkConfiguration>
 							<name>org.osgi.framework.bootdelegation</name>
@@ -169,15 +174,9 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.4</version>
+			<version>1.7.5</version>
 		</dependency>
 
-		<!-- Spring DM -->
-		<dependency>
-			<groupId>net.sourceforge.cglib</groupId>
-			<artifactId>com.springsource.net.sf.cglib</artifactId>
-			<version>2.1.3</version>
-		</dependency>
 
         <!-- Explicit org.osgi.* with <scope>provided as these are also provided by
              the felix osgi package.
@@ -194,31 +193,35 @@
         <dependency>
           <groupId>org.osgi</groupId>
           <artifactId>org.osgi.compendium</artifactId>
-          <version>4.2.0</version>
+          <version>4.3.1</version>
           <scope>provided</scope>
         </dependency>
-        <!--    -->
 
+		<!-- Spring DM -->
+		<dependency>
+			<groupId>net.sourceforge.cglib</groupId>
+			<artifactId>com.springsource.net.sf.cglib</artifactId>
+			<version>2.1.3</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.osgi</groupId>
 			<artifactId>spring-osgi-annotation</artifactId>
-			<version>${spring.dm.version}</version>
+			<version>2.0.0.M1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.osgi</groupId>
 			<artifactId>spring-osgi-extender</artifactId>
-			<version>${spring.dm.version}</version>
+			<version>2.0.0.M1</version>
 		</dependency>
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>org.springframework.context</artifactId>
-			<version>${spring.version}</version>
+			<version>3.0.5.RELEASE</version>
 		</dependency>
 
 		<!-- Java Extension Implementations -->
-		<!-- <dependency> <groupId>com.sun.xml</groupId> <artifactId>com.springsource.com.sun.xml.bind</artifactId>
-			<version>2.2.0</version> </dependency> -->
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>com.springsource.javax.xml.bind</artifactId>
@@ -252,24 +255,24 @@
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>com.springsource.javax.mail</artifactId>
-			<version>${mail.version}</version>
+			<version>1.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>com.springsource.org.apache.commons.codec</artifactId>
-			<version>${commons.codec.version}</version>
+			<version>1.4.0</version>
 		</dependency>
 
-		<!-- OSGi Enterprise Services -->
+		<!-- OSGi Compendium Services -->
 		<dependency>
 			<groupId>uk.org.taverna.osgi.services</groupId>
 			<artifactId>xml-parser-service</artifactId>
-			<version>${osgi.services.version}</version>
+			<version>0.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.osgi.services</groupId>
 			<artifactId>xml-transformer-service</artifactId>
-			<version>${osgi.services.version}</version>
+			<version>0.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
@@ -286,127 +289,124 @@
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>apiconsumer-activity</artifactId>
-			<version>${t2.activities.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>beanshell-activity</artifactId>
-			<version>${t2.activities.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>biomart-activity</artifactId>
-			<version>${t2.activities.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>dataflow-activity</artifactId>
-			<version>${t2.activities.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<!-- <dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>external-tool-activity</artifactId>
-			<version>${t2.activities.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency> -->
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>localworker-activity</artifactId>
-			<version>${t2.activities.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<!-- <dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>rest-activity</artifactId>
-			<version>${t2.activities.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency> -->
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>rshell-activity</artifactId>
-			<version>${t2.activities.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>soaplab-activity</artifactId>
-			<version>${t2.activities.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>spreadsheet-import-activity</artifactId>
-			<version>${t2.activities.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>stringconstant-activity</artifactId>
-			<version>${t2.activities.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>wsdl-activity</artifactId>
-			<version>${t2.activities.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>xpath-activity</artifactId>
-			<version>${t2.activities.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Taverna Activities UI -->
-		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-activities</groupId> <artifactId>all-activity-uis</artifactId>
-			<version>${t2.activities.version}</version> <exclusions> <exclusion> <groupId>net.sf.taverna.t2.activities</groupId>
-			<artifactId>biomoby-activity-ui</artifactId> </exclusion> </exclusions> </dependency> -->
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>apiconsumer-activity-ui</artifactId>
-			<version>${t2.ui.activities.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>beanshell-activity-ui</artifactId>
-			<version>${t2.ui.activities.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>biomart-activity-ui</artifactId>
-			<version>${t2.ui.activities.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>dataflow-activity-ui</artifactId>
-			<version>${t2.ui.activities.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>localworker-activity-ui</artifactId>
-			<version>${t2.ui.activities.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>rshell-activity-ui</artifactId>
-			<version>${t2.ui.activities.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>spreadsheet-import-activity-ui</artifactId>
-			<version>${t2.ui.activities.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>soaplab-activity-ui</artifactId>
-			<version>${t2.ui.activities.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>stringconstant-activity-ui</artifactId>
-			<version>${t2.ui.activities.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>wsdl-activity-ui</artifactId>
-			<version>${t2.ui.activities.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-activities</groupId>
 			<artifactId>unrecognized-activity-ui</artifactId>
-			<version>${t2.ui.activities.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Taverna Workbench -->
@@ -418,52 +418,52 @@
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-impl</groupId>
 			<artifactId>workbench-impl</artifactId>
-			<version>${t2.ui.impl.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-impl</groupId>
 			<artifactId>activity-palette-impl</artifactId>
-			<version>${t2.ui.impl.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-impl</groupId>
 			<artifactId>configuration-impl</artifactId>
-			<version>${t2.ui.impl.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-impl</groupId>
 			<artifactId>edits-impl</artifactId>
-			<version>${t2.ui.impl.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-impl</groupId>
 			<artifactId>file-impl</artifactId>
-			<version>${t2.ui.impl.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-impl</groupId>
 			<artifactId>menu-impl</artifactId>
-			<version>${t2.ui.impl.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-impl</groupId>
 			<artifactId>renderers-impl</artifactId>
-			<version>${t2.ui.impl.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-impl</groupId>
 			<artifactId>selection-impl</artifactId>
-			<version>${t2.ui.impl.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-impl</groupId>
 			<artifactId>httpproxy-config</artifactId>
-			<version>${t2.ui.impl.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-impl</groupId>
 			<artifactId>plugin-manager</artifactId>
-			<version>${t2.ui.impl.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-impl</groupId>
@@ -471,92 +471,90 @@
 			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-impl</groupId> <artifactId>report-impl</artifactId>
-			<version>${t2.ui.impl.version}</version> </dependency> -->
+			<version>2.0-SNAPSHOT</version> </dependency> -->
 
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-components</groupId>
 			<artifactId>perspective-design</artifactId>
-			<version>${t2.ui.components.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-components</groupId>
 			<artifactId>perspective-results</artifactId>
-			<version>${t2.ui.components.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-components</groupId>
 			<artifactId>contextual-views</artifactId>
-			<version>${t2.ui.components.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-components</groupId>
 			<artifactId>credential-manager-ui</artifactId>
-			<version>${t2.ui.components.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-components</groupId>
 			<artifactId>run-ui</artifactId>
-			<version>${t2.ui.components.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>loop-ui</artifactId>
-				<version>${t2.ui.exts.version}</version> </dependency> -->
+				<version>2.0-SNAPSHOT</version> </dependency> -->
 			<groupId>net.sf.taverna.t2.ui-exts</groupId>
 			<artifactId>menu-items</artifactId>
-			<version>${t2.ui.exts.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>parallelize-ui</artifactId>
-			<version>${t2.ui.exts.version}</version> </dependency> -->
+			<version>2.0-SNAPSHOT</version> </dependency> -->
 		<!-- <dependency>
 			<groupId>net.sf.taverna.t2.ui-exts</groupId>
 			<artifactId>renderers-exts</artifactId>
-			<version>${t2.ui.exts.version}</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency> -->
 		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>retry-ui</artifactId>
-			<version>${t2.ui.exts.version}</version> </dependency> -->
+			<version>2.0-SNAPSHOT</version> </dependency> -->
 
 
 		<!-- Taverna Platform -->
 		<dependency>
 			<groupId>uk.org.taverna.platform</groupId>
 			<artifactId>taverna-capability-impl</artifactId>
-			<version>${platform.version}</version>
+			<version>0.1.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.platform</groupId>
 			<artifactId>taverna-run-impl</artifactId>
-			<version>${platform.version}</version>
+			<version>0.1.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.platform</groupId>
 			<artifactId>taverna-execution-impl</artifactId>
-			<version>${platform.version}</version>
+			<version>0.1.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.platform</groupId>
 			<artifactId>taverna-execution-local</artifactId>
-			<version>${platform.version}</version>
+			<version>0.1.3-SNAPSHOT</version>
 		</dependency>
 
-		<!-- Taverna Configuration -->
+		<!-- Taverna Commons -->
 		<dependency>
 			<groupId>uk.org.taverna.configuration</groupId>
 			<artifactId>taverna-configuration-impl</artifactId>
-			<version>${taverna.configuration.version}</version>
+			<version>0.1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.configuration</groupId>
 			<artifactId>taverna-app-configuration-impl</artifactId>
-			<version>${taverna.configuration.version}</version>
+			<version>0.1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.configuration</groupId>
 			<artifactId>taverna-database-configuration-impl</artifactId>
-			<version>${taverna.configuration.version}</version>
+			<version>0.1.1-SNAPSHOT</version>
 		</dependency>
-
-		<!-- Taverna Commons -->
 		<dependency>
 			<groupId>uk.org.taverna.commons</groupId>
 			<artifactId>taverna-download-impl</artifactId>
@@ -582,22 +580,22 @@
 		<dependency>
 			<groupId>uk.org.taverna.scufl2</groupId>
 			<artifactId>scufl2-rdfxml</artifactId>
-			<version>${scufl2.version}</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.scufl2</groupId>
 			<artifactId>scufl2-t2flow</artifactId>
-			<version>${scufl2.version}</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.scufl2</groupId>
 			<artifactId>scufl2-validation-structural</artifactId>
-			<version>${scufl2.version}</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.scufl2</groupId>
 			<artifactId>scufl2-validation-correctness</artifactId>
-			<version>${scufl2.version}</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Data bundle -->
@@ -631,41 +629,41 @@
 		<dependency>
 			<groupId>net.sf.taverna.t2.security</groupId>
 			<artifactId>credential-manager-impl</artifactId>
-			<version>${t2.security.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Taverna Workflow Engine -->
 		<dependency>
 			<groupId>net.sf.taverna.t2.core</groupId>
 			<artifactId>workflowmodel-impl</artifactId>
-			<version>${t2.core.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.core</groupId>
 			<artifactId>workflowmodel-core-extensions</artifactId>
-			<version>${t2.core.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.core</groupId>
 			<artifactId>reference-impl</artifactId>
-			<version>${t2.core.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.core</groupId>
 			<artifactId>reference-core-extensions</artifactId>
-			<version>${t2.core.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Taverna Provenance -->
 		<dependency>
 			<groupId>net.sf.taverna.t2.core</groupId>
 			<artifactId>provenance-derby</artifactId>
-			<version>${t2.core.provenance.derby.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.core</groupId>
 			<artifactId>provenance-mysql</artifactId>
-			<version>${t2.core.provenance.mysql.version}</version>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
