--- a/pom.xml
+++ b/pom.xml
@@ -316,11 +316,11 @@
 			<artifactId>localworker-activity</artifactId>
 			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>rest-activity</artifactId>
 			<version>2.0.1-SNAPSHOT</version>
-		</dependency> -->
+		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>rshell-activity</artifactId>
@@ -491,6 +491,11 @@
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-components</groupId>
 			<artifactId>credential-manager-ui</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-components</groupId>
+			<artifactId>data-management-config-ui</artifactId>
 			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
