--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,10 @@
 					<descriptors>
 						<descriptor>${assembly.descriptor}</descriptor>
 					</descriptors>
+					<archiverConfig>
+						<directoryMode>493</directoryMode> <!-- 493(dec) = 755(oct) -->
+						<defaultDirectoryMode>493</defaultDirectoryMode>
+					</archiverConfig>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -116,43 +120,44 @@
 			</plugin>
 		</plugins>
 		<pluginManagement>
-		    <plugins>
-		        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-		        <plugin>
-		            <groupId>org.eclipse.m2e</groupId>
-		            <artifactId>lifecycle-mapping</artifactId>
-		            <version>1.0.0</version>
-		            <configuration>
-		                <lifecycleMappingMetadata>
-		                    <pluginExecutions>
-		                        <pluginExecution>
-		                            <pluginExecutionFilter>
-		                                <groupId>
-		                                    net.sf.taverna.t2.maven.plugins
-		                                </groupId>
-		                                <artifactId>
-		                                    taverna-maven-plugin
-		                                </artifactId>
-		                                <versionRange>
-		                                    [0.3.1-SNAPSHOT,)
-		                                </versionRange>
-		                                <goals>
-		                                    <goal>
-		                                        profile-generate
-		                                    </goal>
-		                                </goals>
-		                            </pluginExecutionFilter>
-		                            <action>
-		                                <execute>
-                                            <runOnIncremental>false</runOnIncremental>
-                                        </execute>
-		                            </action>
-		                        </pluginExecution>
-		                    </pluginExecutions>
-		                </lifecycleMappingMetadata>
-		            </configuration>
-		        </plugin>
-		    </plugins>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings
+					only. It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											net.sf.taverna.t2.maven.plugins
+										</groupId>
+										<artifactId>
+											taverna-maven-plugin
+										</artifactId>
+										<versionRange>
+											[0.3.1-SNAPSHOT,)
+										</versionRange>
+										<goals>
+											<goal>
+												profile-generate
+											</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute>
+											<runOnIncremental>false</runOnIncremental>
+										</execute>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
 		</pluginManagement>
 	</build>
 	<distributionManagement>
@@ -178,24 +183,23 @@
 		</dependency>
 
 
-        <!-- Explicit org.osgi.* with <scope>provided as these are also provided by
-             the felix osgi package.
-            Avoids:
-            Caused by: java.lang.SecurityException: class "org.osgi.framework.hooks.bundle.CollisionHook"'s signer information does not match signer information of other classes in the same package
-        -->
+		<!-- Explicit org.osgi.* with <scope>provided as these are also provided
+			by the felix osgi package. Avoids: Caused by: java.lang.SecurityException:
+			class "org.osgi.framework.hooks.bundle.CollisionHook"'s signer information
+			does not match signer information of other classes in the same package -->
 
-        <dependency>
-          <groupId>org.osgi</groupId>
-          <artifactId>org.osgi.core</artifactId>
-          <version>4.3.1</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.osgi</groupId>
-          <artifactId>org.osgi.compendium</artifactId>
-          <version>4.3.1</version>
-          <scope>provided</scope>
-        </dependency>
+		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
+			<version>4.3.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.compendium</artifactId>
+			<version>4.3.1</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- Spring DM -->
 		<dependency>
@@ -306,11 +310,8 @@
 			<artifactId>dataflow-activity</artifactId>
 			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>net.sf.taverna.t2.activities</groupId>
-			<artifactId>external-tool-activity</artifactId>
-			<version>2.0.1-SNAPSHOT</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>net.sf.taverna.t2.activities</groupId> <artifactId>external-tool-activity</artifactId>
+			<version>2.0.1-SNAPSHOT</version> </dependency> -->
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>localworker-activity</artifactId>
@@ -513,11 +514,8 @@
 		</dependency>
 		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>parallelize-ui</artifactId>
 			<version>2.0-SNAPSHOT</version> </dependency> -->
-		<!-- <dependency>
-			<groupId>net.sf.taverna.t2.ui-exts</groupId>
-			<artifactId>renderers-exts</artifactId>
-			<version>2.0-SNAPSHOT</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>renderers-exts</artifactId>
+			<version>2.0-SNAPSHOT</version> </dependency> -->
 		<!-- <dependency> <groupId>net.sf.taverna.t2.ui-exts</groupId> <artifactId>retry-ui</artifactId>
 			<version>2.0-SNAPSHOT</version> </dependency> -->
 
@@ -606,27 +604,27 @@
 		<!-- Data bundle -->
 		<dependency>
 			<groupId>uk.org.taverna.databundle</groupId>
-    		<artifactId>databundle</artifactId>
-    		<version>0.1.0-SNAPSHOT</version>
+			<artifactId>databundle</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
-        <!-- HTTP client needed by Data Bundle -->
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-    		<artifactId>httpclient-osgi</artifactId>
-    		<version>4.2.5</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-    		<artifactId>httpcore-osgi</artifactId>
-    		<version>4.2.5</version>
-        </dependency>
-        <!-- Jena bundle needed by jsonld-java-jena -->
-        <!-- See https://github.com/stain/jena/tree/jena-bundle/jena-bundle -->
-        <dependency>
-          <groupId>org.apache.jena</groupId>
-            <artifactId>jena-bundle</artifactId>
-            <version>2.11.0-SNAPSHOT</version>
-        </dependency>
+		<!-- HTTP client needed by Data Bundle -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient-osgi</artifactId>
+			<version>4.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore-osgi</artifactId>
+			<version>4.2.5</version>
+		</dependency>
+		<!-- Jena bundle needed by jsonld-java-jena -->
+		<!-- See https://github.com/stain/jena/tree/jena-bundle/jena-bundle -->
+		<dependency>
+			<groupId>org.apache.jena</groupId>
+			<artifactId>jena-bundle</artifactId>
+			<version>2.11.0-SNAPSHOT</version>
+		</dependency>
 
 
 
