--- a/pom.xml
+++ b/pom.xml
@@ -168,21 +168,6 @@
 	</distributionManagement>
 	<dependencies>
 
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<!-- slf4j implementation -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.5</version>
-		</dependency>
-
-
 		<!-- Explicit org.osgi.* with <scope>provided as these are also provided
 			by the felix osgi package. Avoids: Caused by: java.lang.SecurityException:
 			class "org.osgi.framework.hooks.bundle.CollisionHook"'s signer information
@@ -198,6 +183,13 @@
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.compendium</artifactId>
 			<version>4.3.1</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -625,8 +617,17 @@
 			<artifactId>jena-bundle</artifactId>
 			<version>2.11.0-SNAPSHOT</version>
 		</dependency>
-
-
+		<!-- slf4j implementation -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.5</version>
+		</dependency>
 
 		<!-- Taverna Security -->
 		<dependency>
