--- a/pom.xml
+++ b/pom.xml
@@ -406,6 +406,11 @@
 			<artifactId>unrecognized-activity-ui</artifactId>
 			<version>2.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-activities</groupId>
+			<artifactId>xpath-activity-ui</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Taverna Workbench -->
 		<dependency>
