--- a/pom.xml
+++ b/pom.xml
@@ -590,30 +590,35 @@
 		<!-- Scufl2 -->
 		<dependency>
 			<groupId>uk.org.taverna.scufl2</groupId>
+			<artifactId>scufl2-api</artifactId>
+			<version>0.13.0</version>
+		</dependency>
+		<dependency>
+			<groupId>uk.org.taverna.scufl2</groupId>
 			<artifactId>scufl2-rdfxml</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>0.13.0</version>
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.scufl2</groupId>
 			<artifactId>scufl2-t2flow</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>0.13.0</version>
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.scufl2</groupId>
 			<artifactId>scufl2-validation-structural</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>0.13.0</version>
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.scufl2</groupId>
 			<artifactId>scufl2-validation-correctness</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>0.13.0</version>
 		</dependency>
 
 		<!-- Data bundle -->
 		<dependency>
 			<groupId>uk.org.taverna.databundle</groupId>
 			<artifactId>databundle</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>0.2.0-SNAPSHOT</version>
 		</dependency>
 		<!-- HTTP client needed by Data Bundle -->
 		<dependency>
