--- a/pom.xml
+++ b/pom.xml
@@ -643,7 +643,7 @@
 		<dependency>
 			<groupId>uk.org.taverna.scufl2</groupId>
 			<artifactId>scufl2-t2flow</artifactId>
-			<version>0.13.1</version>
+			<version>0.13.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>uk.org.taverna.scufl2</groupId>
