--- a/pom.xml
+++ b/pom.xml
@@ -206,14 +206,14 @@
                                                 <artifactId>maven-assembly-plugin</artifactId>
                                                 <executions>
                                                         <execution>
-                                <id>nightly-assembly</id>
+                                <id>zip-assembly</id>
                                                                 <phase>package</phase>
                                                                 <goals>
                                                                         <goal>single</goal>
                                                                 </goals>
                                                         <configuration>
                                                                 <descriptors>
-                                                                        <descriptor>src/main/assembly/nightly-assembly.xml
+                                                                        <descriptor>src/main/assembly/zip-assembly.xml
                                                                         </descriptor>
                                                                 </descriptors>
                                                         </configuration>
@@ -634,7 +634,7 @@
 						<overWriteSnapshots>true</overWriteSnapshots>
 						<artifactItems>
                                                                                 <!-- 
-                                        Produced by first doing a nightly build (-Pnightly) but with this plugin
+                                        Produced by first doing a zip build , but with this plugin
                                         commented out. When unzipping taverna-XXXX-bin.zip the repository/ folder
                                         will be missing these artifacts below (mainly due to Raven not merging version
                                         differences). To find out which ones, start run.sh once, and then 
