--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<name>Taverna Workbench [${edition}]</name>
 
         <properties>
-		<edition>core</edition>
+		<edition>biodiversity</edition>
 		<raven.app.name>taverna-${edition}-${project.version}-${buildNumber}</raven.app.name>
                 <m2Repository />
         </properties>
@@ -501,13 +501,13 @@
                 <scope>test</scope>
         </dependency>
 
+		-->
                 <dependency>
                         <groupId>net.sf.taverna.t2.activities</groupId>
                         <artifactId>webdav-activity</artifactId>
                         <version>${t2.activities.version}</version>
                         <scope>test</scope>
                 </dependency>
-		-->
                 
                 <dependency>
                         <groupId>net.sf.taverna.t2.component</groupId>
@@ -559,13 +559,13 @@
                         <scope>test</scope>
                 </dependency>
 
+		-->
                 <dependency>
                         <groupId>net.sf.taverna.t2.ui-activities</groupId>
                         <artifactId>webdav-activity-ui</artifactId>
                         <version>${t2.ui.activities.version}</version>
                         <scope>test</scope>
                 </dependency>
-		-->
                 <dependency>
                         <groupId>net.sf.taverna.t2.ui-activities</groupId>
                         <artifactId>component-activity-ui</artifactId>
