--- a/src/main/resources/conf/workbench-profile.properties
+++ b/src/main/resources/conf/workbench-profile.properties
@@ -1,3 +1,3 @@
-servicecatalogue.base.url=https://www.biocatalogue.org
+servicecatalogue.base.url=https://www.biodiversitycatalogue.org
 myexperiment.base.url=http://www.myexperiment.org
 myexperiment.starterpack=254
